kits/kustomize/colis/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: colis-dev
  labels:
    passerelle: principale      # autorisé à publier sur la passerelle (chapitre 28)
