kits/kustomize/colis/overlays/dev/route.yaml
# Correctif stratégique : seul le nom d'hôte change.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: colis
spec:
  hostnames:
  - colis-dev.local
